// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Upload component renders as div 1`] = `
"<div className={[undefined]}>
  <div loading={false} disabled={false} iconLeft=\\"publish\\" className=\\"wrapcomp\\">
    Upload
    <input className=\\"file\\" type=\\"file\\" onChange={[Function: bound handleChange]} disabled={false} multiple={true} accept=\\".png, .jpg, .jpeg, .pdf\\" />
  </div>
  <div className=\\"holdTags\\" />
</div>"
`;

exports[`Button Upload component renders correctly 1`] = `
"<div className={[undefined]}>
  <Button loading={false} disabled={false} iconLeft=\\"publish\\" className=\\"wrapcomp\\" color=\\"primary\\" size=\\"medium\\" type=\\"button\\" active={false}>
    Upload
    <input className=\\"file\\" type=\\"file\\" onChange={[Function: bound handleChange]} disabled={false} multiple={true} accept=\\".png, .jpg, .jpeg, .pdf\\" />
  </Button>
  <div className=\\"holdTags\\" />
</div>"
`;
